solving height on mobile scrolling issue

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 #container {
+    height: auto;
     max-height: 100vh;
     overflow: scroll;
     scroll-snap-type: y mandatory;
